# mind-cluster

./: README.md  contributing.md
component/ascend-common/api/: consts.go
component/ascend-common/devmanager/: devmanager.go  devmanager_mock.go  devmanager_mock_err.go  devmanager_v2.go
component/ascend-common/devmanager/common/: types.go  utils_v2.go
component/ascend-common/devmanager/dcmi/: dcmi.go  dcmi_interface_api.h  dcmi_v2.go
component/ascend-common/devmanager/hccn/: hccn_tool.go
component/ascend-device-plugin/: main.go
component/ascend-device-plugin/pkg/common/: common_test.go  constants.go  constants_v2.go  device.go  device_test.go  fault_code.go  fault_code_test.go  file_manager.go  file_manager_test.go  upgradefault.go
component/ascend-device-plugin/pkg/device/: ascend910.go  ascend910_test.go  ascendcommon.go  ascendcommon_test.go
component/ascend-device-plugin/pkg/server/: manager.go  manager_test.go  plugin.go  plugin_test.go
component/ascend-docker-runtime/: go.mod
component/ascend-faultdiag/: README.md
component/ascend-faultdiag/scripts/: create_fault_execel.py  create_fault_type_excel.py
component/ascend-faultdiag/scripts/top3_root_sort/: chain_complete.py  root_sort.py
component/ascend-faultdiag/src/: setup_utils.py
component/ascend-faultdiag/toolkit_src/: .gitattributes  README.md  ascend_faultdiag_toolkit.spec  build_cli_exe.bat
component/ascend-faultdiag/toolkit_src/ascend_fd_tk/: cli.py
component/ascend-faultdiag/toolkit_src/doc/: 交互式命令执行.md  在linux上使用的环境准备.md  在windows上使用的环境准备.md  非交互式命令执行.md
component/ascend-for-volcano/: npu.go
component/ascend-for-volcano/common/util/: constants.go  job.go  type.go  type_multilevel.go  util.go  util_test.go
component/ascend-for-volcano/internal/nslb/: nslbv2.go
component/ascend-for-volcano/internal/rescheduling/: job.go  job_test.go
component/ascend-for-volcano/plugin/: const.go  factory.go  factory_test.go  job.go  supernode.go  supernode_test.go  type.go
component/ascend-operator/pkg/utils/: job_test.go  superpod.go  superpod_test.go
component/clusterd/: go.mod  main.go
component/clusterd/testdata/resource/: manual_fault_processor_test.yaml
component/infer-operator/: README.md  go.mod  main.go
component/infer-operator/pkg/configManager/: config_manager_test.go
component/mindio/acp/scripts/: run_gtest_ut.sh  run_python_ut.sh
component/mindio/acp/test/: CMakeLists.txt
component/mindio/acp/test/unit_test/: gtest_main.cpp
component/mindio/acp/test/unit_test/background/backup/: test_backup_target.cpp
component/mindio/acp/test/unit_test/memfs/: test_bmm.cpp  test_mem_file_system.cpp  test_mem_fs_api_basic_interface.cpp  test_mem_fs_api_mkdirs.cpp  test_system_loader_with_mocker.cpp
component/mindio/tft/: README.md
component/mindio/tft/doc/: 环境变量.md
component/mindio/tft/test/: CMakeLists.txt  run_gtest_dt.sh
component/mindio/tft/test/llt/: CMakeLists.txt
component/mindio/tft/test/llt/testcase/controller/: controller_arf_test.cpp  controller_base_test.cpp
component/noded/pkg/common/: common.go
component/noded/pkg/grpcclient/: grpcclient.go
component/npu-exporter/: build.sh  go.sum
component/npu-exporter/collector/common/: collector_for_container.go  collector_for_container_test.go  constants.go  metrics_collector.go  npu_collector.go
component/npu-exporter/collector/config/: metrics_config.go  metrics_config_test.go
component/npu-exporter/collector/metrics/: collector_for_ddr.go  collector_for_hbm.go  collector_for_hccs.go  collector_for_network.go  collector_for_network_v2.go  collector_for_npu.go  collector_for_optical.go  collector_for_optical_npu.go  collector_for_pcie.go  collector_for_roce.go  collector_for_sio.go  collector_for_ub.go  collector_for_ub_test.go  collector_for_version.go  collector_for_vnpu.go  collector_for_vnpu_test.go  collector_test.go  common_utils.go  common_utils_test.go
component/npu-exporter/plugins/: collector_for_text_file.go  machine_card_num_metrics.go
component/taskd/taskd/api/: taskd_agent_api.py  taskd_proxy_api.py
component/taskd/taskd/go/: backend_api.go
docs/rfc/26.0.0/: Device-plugin故障升级原因.md  features-multilevel-scheduling-npu-affinity.md  支持NPU软切分.md
docs/zh/: overview.md  release_notes.md
docs/zh/advanced knowledge/: 进程级重调度.md
docs/zh/faultdiag/: appendix.md  common_operations.md  faq.md  installation_guide.md  introduction.md  menu_faultdiag_user_guide.md  security_hardening.md  user_guide.md
docs/zh/faultdiag/api/: README.md  configuration_file_customization.md  fault_diagnosis.md  fault_entity_customization.md  fault_event_cleaning.md  fault_event_diagnosis.md  fault_log_masking.md  help_command.md  log_cleaning.md  menu_api.md  root_cause_cleaning.md  root_cause_diagnosis.md  service_stream_cleaning.md  single_server_fault_diagnosis.md  version_query.md
docs/zh/faultdiag/ascend-faultdiag-toolkit/: ascend-faultdiag-toolkit.md
docs/zh/faultdiag/diag_tool/: 链路故障诊断资料.md
docs/zh/resource/: MindCluster 26.0.0 Ascend FaultDiag公网地址.xlsx  MindCluster 26.0.0 故障诊断类型.xlsx  NPU Exporter调用的HDK接口.xlsx  数据信息说明.xlsx
docs/zh/scheduling/: appendix.md  common_operations.md  faq.md  fault_recovery_acceleration.md  installation_guide.md  introduction.md  menu_scheduling_user_guide.md  optimizing_saving_and_loading_checkpoints.md  quick_start.md  references.md  security_hardening.md  supported_product_models_and_oss.md
docs/zh/scheduling/api/: README.md  ascend_device_plugin.md  ascend_job.md  ascend_operator.md  clusterd.md  elastic_agent.md  environment_variable_description.md  hccl.json_file_description.md  k8s.md  noded.md  npu_exporter.md  taskd.md  volcano.md
docs/zh/scheduling/installation_guide/: 03_installation.md
docs/zh/scheduling/usage/: README.md  appliance.md  basic_scheduling.md  containerization.md  infer_operator_best_practice.md  mindie_motor_best_practice.md  resource_monitoring.md  resumable_training.md  sglang_best_practice.md  virtual_instance.md  vllm_best_practice.md
tests/: __init__.py
tests/st/st_dev/: JobTool.py  K8sDistributedManage.py  K8sNode.py  K8sTool.py
(+224 files in other folders)
